# OdysseyDecomp

./: .build_sources  .clang-format  .envrc  .gitattributes  .gitignore  .gitmodules  .lite_project.lua  CMakeLists.txt  Contributing.md  README.md  ToolchainNX64.cmake  compile.bat  compile.py  convertFunctions.py  flake.nix  manifest.json  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/files/: HeadersCMakeLists.txt  rebase-requirement-prs.txt
.github/scripts/: copy-headers.sh  decomp-dev.py  process-headers.py  push-headers.sh  test-compile-create.sh
.github/workflows/: clean-headers.yml  compile-check.yml  copy-headers.yml  decomp-dev.yml  lint.yml  nix-check-setup.yml  pr-label-ai.yml  pr-status-label-new.yml  pr-status-label-review-trigger.yml  pr-status-label-review.yml  pr-status-label-schedule.yml  pr-status-label.yml  progress.yml  rebase-requirement.yml  selfservice-labels.yml  test-compile.yml  tracker-trigger-full-sync.yml
data/: data_strings.csv  data_symbols.csv  diff.txt  file_list.csv  main_Shadow.h  nex_list.yml  odyssey_functions_merge.py  translate.py  translate_file_list.py
data/1.0/: data_symbols.csv
data/1.0.1/: data_symbols.csv
data/1.1/: data_symbols.csv
data/1.2/: data_symbols.csv
data/1.3/: data_symbols.csv  odyssey_functions.csv
docs/: Doxyfile  doxygen_config.py
include/: aarch64.h
include/NintendoSDK/: CMakeLists.txt
include/agl/: CMakeLists.txt
include/agl/g3d/: g3d_ResFile.h
include/agl/include/agl/Utils/: aglResCommon.h  aglResParameter.h
include/agl/include/agl/g3d/: g3dResFile.h
include/agl/src/Utils/: aglParameter.cpp
include/sead/: seadBitFlag.h  seadDisposer.h  seadFileDevice.h  seadHeap.h  seadHostIO.h  seadListImpl.h  seadMatrix.h  seadNamable.h  seadQuat.h  seadResource.h  seadRuntimeTypeInfo.h  seadSafeString.h  seadSafeString.hpp  seadVector.h
lib/aarch64/: byteswap.h  features.h
lib/al/: playerUtil.h
lib/game/: Player.h
lib/rs/: Dimension.h  Judge.h  OtherUtil.h  Player.h  Sensor.h
source/: example.cpp
source/sead/: seadVector.cpp
src/: CMakeLists.txt  InputStuff.cpp  PlayerStuff.cpp  PlayerUtil.h  Stuff.cpp  Stuff.h
src/Amiibo/: AmiiboNpcDirector.cpp  AmiiboNpcDirector.h  HelpAmiiboCoinCollect.cpp  HelpAmiiboCoinCollect.h  HelpAmiiboCountUpCoin.cpp  HelpAmiiboCountUpCoin.h  HelpAmiiboDirector.cpp  HelpAmiiboDirector.h  HelpAmiiboExecutor.cpp  HelpAmiiboExecutor.h  HelpAmiiboFallCoin.cpp  HelpAmiiboFallCoin.h  HelpAmiiboFunction.h  HelpAmiiboInvincibleAttack.cpp  HelpAmiiboInvincibleAttack.h  HelpAmiiboLifeMaxUpItem.cpp  HelpAmiiboLifeMaxUpItem.h  HelpAmiiboNavigateCoinCollect.cpp  HelpAmiiboNavigateCoinCollect.h  HelpAmiiboPlayerInvicible.cpp  HelpAmiiboPlayerInvincible.cpp  HelpAmiiboPlayerInvincible.h  HelpAmiiboYoshi.cpp  HelpAmiiboYoshi.h  ItemAmiiboKoopa.cpp  ItemAmiiboKoopa.h  SearchAmiiboDataTable.cpp  SearchAmiiboDataTable.h
src/Area/: BirdGatheringSpotArea.cpp  BirdGatheringSpotArea.h  ExtForceArea.cpp  ExtForceArea.h  ForceRecoveryKidsArea.cpp  ForceRecoveryKidsArea.h  In2DAreaMoveControl.cpp  In2DAreaMoveControl.h  MoveArea2D.cpp  MoveArea2D.h  NpcForceMaterialCodeArea.cpp  NpcForceMaterialCodeArea.h  RouteGuideArea.cpp  RouteGuideArea.h  StainArea.cpp  StainArea.h
src/al/: CMakeLists.txt
src/al/LiveActor/: ActorPoseKeeper.cpp  CMakeLists.txt  DepthShadowMapCtrl.cpp  LiveActor.cpp  LiveActorFlag.cpp  LiveActorGroup.cpp  PlayerActorBase.cpp  ShadowKeeper.cpp  ShadowMaskCtrl.cpp
src/al/MapObj/: CMakeLists.txt
src/al/Project/: CMakeLists.txt
src/al/Project/HitSensor/: CMakeLists.txt  HitSensor.cpp  SensorHitGroup.cpp
src/al/Project/Item/: ActorScoreKeeper.cpp  CMakeLists.txt
src/al/Project/Rail/: BezierCurve.cpp  LinearCurve.cpp
src/al/actor/: CMakeLists.txt  Factory.cpp  Placement.cpp  ProjectActorFactory.cpp  ProjectAppearSwitchFactory.cpp
src/al/async/: FunctorV0M.cpp
src/al/byaml/: ByamlContainerHeader.cpp  ByamlData.cpp  ByamlHashPair.cpp  ByamlHeader.cpp  ByamlIter.cpp  ByamlStringTableIter.cpp  CMakeLists.txt
src/al/byaml/writer/: ByamlWriter.cpp  ByamlWriterBigDataList.cpp  ByamlWriterContainer.cpp  ByamlWriterData.cpp  ByamlWriterStringTable.cpp  CMakeLists.txt
src/al/collision/: CMakeLists.txt  KCollisionServer.cpp
src/al/control/: CMakeLists.txt  PlayerActionTurnControl.cpp
src/al/factory/: CMakeLists.txt  Factory.cpp
src/al/graph/: CMakeLists.txt
src/al/hack/: CMakeLists.txt  HackCapThrowParam.cpp
src/al/input/: CMakeLists.txt  PlayerInput.cpp  PlayerInputFunction.cpp
src/al/iuse/: CMakeLists.txt  IUseExecutor.cpp  IUseSceneCreator.cpp
src/al/nerve/: CMakeLists.txt  NerveAction.cpp  NerveExecutor.cpp  NerveStateBase.cpp  NerveStateCtrl.cpp
src/al/objects/: CMakeLists.txt  Togezo.cpp
src/al/objects/Mofumofu/: CMakeLists.txt  MofumofuWarpHole.cpp
src/al/player/: CMakeLists.txt  PlayerActorBase.cpp  PlayerActorHakoniwa.cpp  PlayerConst.cpp  PlayerCostumeInfo.cpp  PlayerModelHolder.cpp  PlayerPainPartsKeeper.cpp  PlayerTrigger.cpp
src/al/pose/: ActorPoseKeeper.cpp  CMakeLists.txt
src/al/rail/: CMakeLists.txt  RailPart.cpp
src/al/resource/: AchievementHolder.cpp  AchievementInfoReader.cpp  CMakeLists.txt  Resource.cpp
src/al/scene/: CMakeLists.txt  ISceneObj.cpp  SceneObjHolder.cpp
src/al/sead/: CMakeLists.txt  seadSafeString.cpp
src/al/sensor/: HitSensor.cpp  SensorHitGroup.cpp
src/al/sequence/: CMakeLists.txt  Sequence.cpp
src/al/stage/: StageInfo.cpp
src/al/util/: ByamlUtil.cpp  CMakeLists.txt  InputUtil.cpp  LiveActorUtil.cpp  MathUtil.cpp  NerveUtil.cpp  OtherUtil.cpp  PlacementUtil.cpp  PlayerUtil.cpp  RandomUtil.cpp  StringUtil.cpp
toolchain/: ToolchainNX64.cmake  ToolchainPC64.cmake  cache-version-url.txt
tools/: build.py  cache-version.json  check-format-new.py  check-format.py  check-object.py  config.toml  createFunctionCSV.py  default.nix  diff.py  diff_settings.py  file_list_progress.py  fix_includes.py  functions.txt  generate-header.py  generate-strings.py  iwyu.imp  notes-headergen.md  print_decomp_symbols.py  progress.py  rename_functions_in_ida.py  setup.py  tools.nix
(+2137 files in other folders)
